<resources>
    <string name="app_name">NearbyConnectSample</string>
    <string name="discover_nearby_device">Discover nearby device</string>
    <string name="share_device_information">Share device information</string>
    <string name="nearby_message">Nearby Message</string>
    <string name="nearby_file_shared">Nearby File Shared</string>
    <string name="nearby_stream">Nearby Stream</string>
    <string name="no_file_open">No File to open</string>
    <string name="insubscribing">UnSubscribing</string>
    <string name="unPublishing">UnPublishing</string>
    <string name="chat">Nearby Message Chat</string>
    <string name="menu_clear">Clear</string>
    <string name="nearby_connection_chat">Nearby connection chat</string>
</resources>
